--- a/src/main/resources/org/uts/subjectlist.fxml
+++ b/src/main/resources/org/uts/subjectlist.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane fx:controller="org.uts.SubjectListController" xmlns:fx="http://javafx.com/fxml/1" styleClass="login-page" stylesheets="@style.css">
-    <VBox alignment="center">
-        <Label layoutX="30.0" layoutY="10.0" text="Current Enrolment" />
-        <ListView fx:id="subjectListView" />
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="14" GridPane.columnSpan="3">
-        <Button styleClass="login-button" text="Enrol in subjects" onAction="#enrollButtonAction" />
-        <Button styleClass="login-button" text="Logout" onAction="#logout" />
-    </HBox>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
+<GridPane fx:controller="org.uts.SubjectListController" xmlns:fx="http://javafx.com/fxml/1" styleClass="login-page" stylesheets="@style.css">
+    <VBox alignment="center" spacing="8">
+        <Label text="Current Enrolment"/>
+        <ListView fx:id="subjectListView"  />
+        <HBox alignment="center" spacing="16">
+            <Button styleClass="login-button" text="Enrol in subjects" onAction="#enrollButtonAction" />
+            <Button styleClass="login-button" text="Logout" onAction="#logout" />
+        </HBox>
     </VBox>
-</AnchorPane>
+</GridPane>
 
