--- a/src/main/resources/org/uts/enrolmentlist.fxml
+++ b/src/main/resources/org/uts/enrolmentlist.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<GridPane fx:controller="org.uts.EnrolmentController" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="2" vgap="2" styleClass="login-page" stylesheets="@style.css">
-
+<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.uts.EnrolmentController" alignment="center" hgap="2"
+          vgap="2" styleClass="background" stylesheets="@style.css">
+    <Label textAlignment="CENTER" text="Enrollment Subjects"/>
     <HBox alignment="center" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="14" GridPane.columnSpan="3">
-        <Button styleClass="login-button" text="Enrol" onAction="#enrolButtonAction" />
-        <Button styleClass="login-button" text="Back" onAction="#backButtonAction" />
+        <Button styleClass="button" text="Enrol subjects" onAction="#enrolButtonAction"/>
+        <Button styleClass="button" text="Back" onAction="#backButtonAction"/>
     </HBox>
 
 </GridPane>
