edit heading login

--- a/src/main/resources/org/uts/style.css
+++ b/src/main/resources/org/uts/style.css
@@ -10,11 +10,12 @@
 }
 
 .heading {
-  -fx-font-size: 30px;
+  -fx-font-size: 36px;
   -fx-font-family: "Tahoma";
   -fx-font-weight: bold;
   -fx-fill: #66CCFF;
   -fx-stroke: #3333CC;
+  -fx-text-alignment: center;
 }
 
 .label {
