--- a/src/main/resources/org/uts/subjectlist.fxml
+++ b/src/main/resources/org/uts/subjectlist.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uts.SubjectListController" styleClass="background"
           stylesheets="@style.css">
     <VBox alignment="center" spacing="8">
